--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola</h1>
+
+<h2>ayuda</h2>
     <script src="index.js"></script>
 </body>
 </html>
