--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Saludos</h2>
-    
+<h1>fasdfss</h1>    
     <script src="index.js"></script>
 </body>
 </html>
