--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
 </head>
 <body>
 
-<<<<<<< HEAD
-<h1>holaa</h1>
-=======
 
 
-<h2>Saludos</h2>
->>>>>>> 20db117 (prueba 11)
+<h2>Saludo23423s</h2>
     
         
     <h3>fasdf</h3>
 <h1>fasdfss</h1>  
+
 
 <h3>asdfsadf</h3>
     <script src="index.js"></script>
